--- a/pages/banda-ciruelo.html
+++ b/pages/banda-ciruelo.html
@@ -26,7 +26,7 @@
                     <li class="menu-item"><a class="item-menu" href="#">Espacios</a></li>
                     <li class="menu-item"><a class="item-menu" href="#">Agenda</a></li>
                     <li class="menu-item"><a class="item-menu" href="#">Noticias</a></li>
-                    <li class="menu-item"><a class="item-menu" href="#">Iniciar Sesión</a></li>
+                    <li class="menu-item"><a class="item-menu" href="#">Iniciar sesión</a></li>
                    
                 </ul>
             </nav>
@@ -66,10 +66,10 @@
 		<!--Integrantes-->
 		<div class="integrantes">
 			<h3 class="subtitulos-frameartistas">Integrantes</h3>
-			<p class="texto-normal">Toto Ciccone:    batería</p>
-			<p class="texto-normal">Tiago Vega:    bajo, guitarra eléctrica y percusión</p>
-			<p class="texto-normal">Manuel Eguía:    voz, guitarra eléctrica y guitarra acústica</p>
-			<p class="texto-normal">Sebastián Baró:    organo y percusión</p>
+			<p class="texto-banda">Toto Ciccone:    batería</p>
+			<p class="texto-banda">Tiago Vega:    bajo, guitarra eléctrica y percusión</p>
+			<p class="texto-banda">Manuel Eguía:    voz, guitarra eléctrica y guitarra acústica</p>
+			<p class="texto-banda">Sebastián Baró:    organo y percusión</p>
 		</div>
 		
 		<!--Discos-->
@@ -81,8 +81,8 @@
 						<img src="../img/frame-ciruelo/ciruelo-disco1.svg" alt="disco1">
 					</div>
 					<div>
-						<h4 class="sub-card">El año de la cosa</h4>
-						<p class="lugar">2012</p>
+						<h4 class="sub-banda">El año de la cosa</h4>
+						<p class="sub-fecha">2012</p>
 					</div>
 				</div>
 				
@@ -91,8 +91,8 @@
 						<img src="../img/frame-ciruelo/ciruelo-disco2.svg" alt="disco2">
 					</div>
 					<div>
-						<h4 class="sub-card">El vientre de la ballenaa</h4>
-						<p class="lugar">2015</p>
+						<h4 class="sub-banda">El vientre de la ballena</h4>
+						<p class="sub-fecha">2015</p>
 					</div>
 				</div>
 
@@ -101,8 +101,8 @@
 						<img src="../img/frame-ciruelo/ciruelo-disco3.svg" alt="disco3">
 					</div>
 					<div>
-						<h4 class="sub-card">Las oportunidades</h4>
-						<p class="lugar">2018</p>
+						<h4 class="sub-banda">Las oportunidades</h4>
+						<p class="sub-fecha">2018</p>
 					</div>
 				</div>
 			</div>
