--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header class="header">
         <div class="namepage">
             <div class="hand">
-                <a href="./index.html"><img class="logoheader" src="./img/logo-header.svg" alt="rockamba"></a>
+                <a href=""><img class="logoheader" alt=""></a>
             </div>
         </div>
 
         <div class="menu">
             <nav class="navbar">
                 <ul class="listamenu">
-                    <li class="menu-item"><a class="item-menu" href="./pages/artistas.html">Artistas</a></li>
+                    <li class="menu-item"><a class="item-menu" href="./artistas.html">Artistas</a></li>
                     <li class="menu-item"><a class="item-menu" href="#">Espacios</a></li>
                     <li class="menu-item"><a class="item-menu" href="#">Agenda</a></li>
                     <li class="menu-item"><a class="item-menu" href="#">Noticias</a></li>
@@ -40,122 +40,14 @@
         
     </header>
 
-    <main class="main">
+	<main class="main-intro"> 
+		<section class="intro">
+			<a class="link-home" href="./home.html">
+				<img class="img-intro animated zoomInUp" src="./img/nombre-intro.svg" alt="Rockamba">
+			</a>
+		</section>
+	</main>
 
-        <div class="inicio">
-            <div class="titulo">
-                <div class="titulo-simple">
-                    <h2 class="titulo1">Encontrá tu lugar y</h2>
-                </div>
-                <div class="titulopartido">
-                    <h2 class="titulo1">salí a</h2>
-                    <h1 class="rockearla">Rockearla</h1>
-                </div>
-            </div>
-            <div class="imagenTitulo">
-                <img src="./img/bighand.svg" alt="big-hand">
-            </div>
-        </div>
-
-        <div class="buscadores">
-			<div class="buscador">
-                <img class="img-buscador" src="./img/frame-home/foto de card de bandas.png" alt="foto card bandas">
-                <p class="texto texto-buscador">¿Tenés una banda y no sabés dónde tocar?</p>
-                <div class="boton-buscador">
-                    <img src="./img/frame-home/pua-chica-negra.svg" alt="pua">
-                    <button class="button button-large">Buscá Espacio</button>
-                </div>
-            </div>
-            <div class="buscador">
-                <img class="img-buscador" src="./img/frame-home/foto de card de espacio.png" alt="foto card espacio">
-                <p class="texto texto-buscador">¿Tenés un espacio y no conseguís bandas?</p>
-                <div class="boton-buscador">
-                    <img src="./img/geo-chico.svg" alt="geo">
-                    <button class="button button-large">Buscá Banda</button>
-                </div>
-            </div>
-        </div>
-
-        <div class="carrusel">
-            <div class="titulo-carrusel">
-                <h2 class="sub-carrusel">Próximos recitales</h2>
-            </div>
-            <div class="cards-carrusel">
-                <div class="card-carrusel">
-					<a href="#"><img class="img-carrusel" src="./img/frame-home/Card 5.png" alt="CLUB AUDIOVISUAL"></a>
-                </div>
-                <div class="card-carrusel">
-					<a href="#"><img class="img-carrusel" src="./img/frame-home/card 6.png" alt="MORA Y LOS METEGOLES"></a>
-                </div>
-                <div class="card-carrusel">
-					<a href="#"><img class="img-carrusel" src="./img/frame-home/card 7.png" alt="LUCAS & THE WOODS"></a>
-                </div>
-                <div class="card-carrusel">
-					<a href="#"><img class="img-carrusel" src="./img/frame-home/CARD 8.png" alt="VARICELA"></a>
-                </div>
-            </div>
-        </div>
-
-        <div class="div-form">
-            <div class="titulo-form">
-                <h2 class="subtitulo">¿Tenés alguna pregunta?</h2>
-            </div>
-            <div class="form-contacto">
-                    <fieldset class="form-cuadro">
-                        <legend class="form-titulo">Contactanos</legend>
-						<div class="formulario">
-							<div>
-								<div class="form-item">
-                                	<input class="input" type="text" name="name" placeholder="Nombre" required>
-								</div>
-								<div class="form-item">
-									<input class="input" type="text" name="name" placeholder="Email" required>
-								</div>
-								<div class="form-item">
-									<input class="input" type="text" name="name" placeholder="Ciudad" required>
-								</div>
-								<div class="form-item">
-									<input class="input" type="text" name="name" placeholder="Teléfono" required>
-								</div>
-							</div>
-                            <div>
-								<div class="form-item">
-									<textarea name="Comentar" placeholder="Comentarios" class="input" cols="30" rows="10"></textarea>
-								</div>
-								<div class="form-item botones-form">
-									<input class="button-borrar" type="reset" value="Borrar">
-									<input class="button" type="button" value="Enviar">
-								</div>
-							</div>
-						</div>
-                    </fieldset>                
-            </div>
-        </div>
-        
-    </main>
-
-    <footer class="footer">
-        <div class="division"><img src="./img/frame-home/linea vertical.png" alt="linea vertical"></div>
-        <div class="copyright">
-            <h2 class="subtitulo foot">Es tu movida</h2>
-            <p class="texto-white foot preg">Copyright © 2022 Rockamba. Derechos Reservados.</p>
-        </div>
-        <div class="division"><img src="./img/frame-home/linea vertical.png" alt="linea vertical"></div>
-        <div class="footer-div preg">
-            <img class="foot" src="./img/frame-home/informacion.png" alt="info">
-            <a class="foot texto-white" href="#">Preguntas frecuentes</a>
-        </div>
-        <div class="division"><img src="./img/frame-home/linea vertical.png" alt="linea vertical"></div>
-        <div class="footer-div">
-            <p class="texto-white foot">Redes</p>
-            <a href="https://es-la.facebook.com/"><img class="foot" src="./img/frame-home/bi_facebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/"><img class="foot"  src="./img/frame-home/ph_instagram-logo-fill.png" alt="instagram"></a>
-            <a href="https://twitter.com/?lang=es"><img class="foot" src="./img/frame-home/akar-icons_twitter-fill.png" alt="twitter"></a>
-            <a href="https://www.youtube.com/"><img class="foot" src="./img/frame-home/fa6-brands_youtube.png" alt="youtube"></a>
-        </div>
-        <div class="division"><img src="./img/frame-home/linea vertical.png" alt="linea vertical"></div>
-
-    </footer>
 
 </body>
 </html>
